Ver.
--------------------------------
- Bugfix - CreatePersonAction, CreateInterventionAsync, fix for people that set their status to Active for the first time (#90)

Ver. 3.7.2 - 2022-04-26
--------------------------------
- Feature - Resolution property added to MapRequest class (#84)

Ver. 3.7.1 - 2022-04-26
--------------------------------
- Feature - solvedByUser property added to QuizDto class (#83)

Ver. 3.7.0 - 2022-04-26
--------------------------------
- Feature - Quiz&Answer management (#migration added)(#83)

Ver. 3.6.1 - 2022-04-14
--------------------------------
- Feature - Format property added to LayerDto class

Ver. 3.6.0 - 2022-04-13
--------------------------------
- Feature - GetMetadata API of importer added (#80)

Ver. 3.5.0 - 2022-04-08
--------------------------------
- Feature - MapRequest with more than one DataypeId added (migration added)(#82)

Ver. 3.4.0 - 2022-03-31
--------------------------------
- Feature TMP - Removed Backoffice permission from SocialAppService
- Feature - Frequency prop added to Layer class (migration added)(#81)

Ver. 3.3.2 - 2022-03-04
--------------------------------
- Feature - Properties CanBeVisualized and Format added to Layer class (migration added)(#79)

Ver. 3.3.1 - 2022-03-04
--------------------------------
- Bugfix - Fix CreateTeam function, possibility for organization manager to create child org (#72)
- Bugfix - Added ReadByUser property to TipDto class (#77)

Ver. 3.3.0 - 2022-02-09
--------------------------------
- Bugfix - Fix bug on prop IsPrivate for Report, when a citizen updates it (#76)
- Feature - Importer update, GetLayers with includeMapRequests input param (#75)

Ver. 3.1.0 - 2022-01-31
--------------------------------
- Feature - Importer update, GetLayers with MapRequestCode input param (#75)

Ver. 3.0.0 - 2022-01-31
--------------------------------
- Feature - PersonTips table added, SetTipAsRead API added (migration added)(#74)

Ver. 2.10.0 - 2022-01-28